; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_scrcpy.c_event_loop.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_scrcpy.c_event_loop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@event_watcher = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @event_loop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @event_loop(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  br label %8

8:                                                ; preds = %18, %2
  %9 = call i64 @SDL_WaitEvent(i32* %6)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %19

11:                                               ; preds = %8
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @handle_event(i32* %6, i32 %12)
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  switch i32 %14, label %18 [
    i32 128, label %15
    i32 129, label %16
    i32 130, label %17
  ]

15:                                               ; preds = %11
  store i32 1, i32* %3, align 4
  br label %20

16:                                               ; preds = %11
  store i32 0, i32* %3, align 4
  br label %20

17:                                               ; preds = %11
  br label %18

18:                                               ; preds = %11, %17
  br label %8

19:                                               ; preds = %8
  store i32 0, i32* %3, align 4
  br label %20

20:                                               ; preds = %19, %16, %15
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i64 @SDL_WaitEvent(i32*) #1

declare dso_local i32 @handle_event(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
